tests/sksl/errors/golden/WhileTypeMismatch.glsl
### Compilation failed:

error: 2: expected 'bool', but found 'float3'
1 error
